{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 104,
  "lineage": "184e2f35-5780-22f6-6e5b-7014d36eb999",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/app-nsg-TC",
            "location": "australiaeast",
            "name": "app-nsg-TC",
            "resource_group_name": "rg-TC",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/db-nsg-TC",
            "location": "australiaeast",
            "name": "db-nsg-TC",
            "resource_group_name": "rg-TC",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/web-nsg-TC",
            "location": "australiaeast",
            "name": "web-nsg-TC",
            "resource_group_name": "rg-TC",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rule001",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/app-nsg-TC/securityRules/ssh-rule-1",
            "name": "ssh-rule-1",
            "network_security_group_name": "app-nsg-TC",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-TC",
            "source_address_prefix": "192.168.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "rule002",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/app-nsg-TC/securityRules/ssh-rule-2",
            "name": "ssh-rule-2",
            "network_security_group_name": "app-nsg-TC",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "rg-TC",
            "source_address_prefix": "192.168.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_network_security_group.app_nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rule001",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/db-nsg-TC/securityRules/ssh-rule-1",
            "name": "ssh-rule-1",
            "network_security_group_name": "db-nsg-TC",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "rg-TC",
            "source_address_prefix": "192.168.2.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "rule002",
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3306",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/db-nsg-TC/securityRules/ssh-rule-3",
            "name": "ssh-rule-3",
            "network_security_group_name": "db-nsg-TC",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-TC",
            "source_address_prefix": "192.168.1.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "rule001",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/web-nsg-TC/securityRules/ssh-rule-1",
            "name": "ssh-rule-1",
            "network_security_group_name": "web-nsg-TC",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "rg-TC",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.this"
          ]
        },
        {
          "index_key": "rule002",
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/web-nsg-TC/securityRules/ssh-rule-2",
            "name": "ssh-rule-2",
            "network_security_group_name": "web-nsg-TC",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-TC",
            "source_address_prefix": "192.168.3.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/24",
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/app-subnet-TC",
            "name": "app-subnet-TC",
            "resource_group_name": "rg-TC",
            "virtual_network_name": "vnet-TC"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.3.0/24",
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/db-subnet-TC",
            "name": "db-subnet-TC",
            "resource_group_name": "rg-TC",
            "virtual_network_name": "vnet-TC"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/web-subnet-TC",
            "name": "web-subnet-TC",
            "resource_group_name": "rg-TC",
            "virtual_network_name": "vnet-TC"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_nsg_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/app-subnet-TC",
            "network_security_group_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/app-nsg-TC",
            "subnet_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/app-subnet-TC"
          },
          "dependencies": [
            "azurerm_virtual_network.this",
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.this",
            "azurerm_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_nsg_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/db-subnet-TC",
            "network_security_group_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/db-nsg-TC",
            "subnet_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/db-subnet-TC"
          },
          "dependencies": [
            "azurerm_network_security_group.db_nsg",
            "azurerm_resource_group.this",
            "azurerm_subnet.db_subnet",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_nsg_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/web-subnet-TC",
            "network_security_group_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/web-nsg-TC",
            "subnet_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/web-subnet-TC"
          },
          "dependencies": [
            "azurerm_network_security_group.web_nsg",
            "azurerm_resource_group.this",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "eddd0e58-2362-4ec3-8f40-0aa3802c0c51",
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC",
            "location": "australiaeast",
            "name": "vnet-TC",
            "resource_group_name": "rg-TC",
            "subnet": [
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/web-subnet-TC",
                "name": "web-subnet-TC",
                "security_group": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/web-nsg-TC"
              },
              {
                "address_prefix": "192.168.2.0/24",
                "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/app-subnet-TC",
                "name": "app-subnet-TC",
                "security_group": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/app-nsg-TC"
              },
              {
                "address_prefix": "192.168.3.0/24",
                "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/db-subnet-TC",
                "name": "db-subnet-TC",
                "security_group": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkSecurityGroups/db-nsg-TC"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine[\"one\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkInterfaces/vm-vm001-nic",
            "internal_domain_name_suffix": "lahn11lcepbu3d0abkryalamkb.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-vm001-nic-ip",
                "primary": true,
                "private_ip_address": "192.168.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/app-subnet-TC"
              }
            ],
            "location": "australiaeast",
            "mac_address": "00-0D-3A-D0-45-00",
            "name": "vm-vm001-nic",
            "private_ip_address": "192.168.2.5",
            "private_ip_addresses": [
              "192.168.2.5"
            ],
            "resource_group_name": "rg-TC",
            "virtual_machine_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Compute/virtualMachines/vm-vm001"
          },
          "dependencies": [
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.this",
            "azurerm_subnet.app_subnet",
            "azurerm_subnet_network_security_group_association.app_nsg_subnet",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine[\"three\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkInterfaces/vm-vm003-nic",
            "internal_domain_name_suffix": "lahn11lcepbu3d0abkryalamkb.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-vm003-nic-ip",
                "primary": true,
                "private_ip_address": "192.168.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/app-subnet-TC"
              }
            ],
            "location": "australiaeast",
            "mac_address": "00-0D-3A-D0-AA-08",
            "name": "vm-vm003-nic",
            "private_ip_address": "192.168.2.6",
            "private_ip_addresses": [
              "192.168.2.6"
            ],
            "resource_group_name": "rg-TC",
            "virtual_machine_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Compute/virtualMachines/vm-vm003"
          },
          "dependencies": [
            "azurerm_virtual_network.this",
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.this",
            "azurerm_subnet.app_subnet",
            "azurerm_subnet_network_security_group_association.app_nsg_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine[\"two\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/networkInterfaces/vm-vm002-nic",
            "internal_domain_name_suffix": "lahn11lcepbu3d0abkryalamkb.px.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "vm-vm002-nic-ip",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Network/virtualNetworks/vnet-TC/subnets/app-subnet-TC"
              }
            ],
            "location": "australiaeast",
            "mac_address": "00-22-48-11-C8-61",
            "name": "vm-vm002-nic",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "rg-TC",
            "virtual_machine_id": "/subscriptions/7a342a8a-1fd3-4212-b4dc-f75726e22aae/resourceGroups/rg-TC/providers/Microsoft.Compute/virtualMachines/vm-vm002"
          },
          "dependencies": [
            "azurerm_subnet_network_security_group_association.app_nsg_subnet",
            "azurerm_virtual_network.this",
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.this",
            "azurerm_subnet.app_subnet"
          ]
        }
      ]
    }
  ]
}